<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter">Войти</string>
    <string name="enter_title">Вход</string>
    <string name="policy_title">Нажимая кнопку “Войти”, Вы принимаете</string>
    <string name="policy_subtitle"><u>условия программы лояльности</u></string>
</resources>